# ICQ

./: CMakeLists.txt  build.gradle.kts  gradle-wrapper.properties  gradle.properties  libQt6Concurrent_arm64-v8a.prl  libQt6Core_arm64-v8a.prl  libQt6QuickTest.prl  settings.gradle.kts
.github/workflows/: extract.yml  mirror.yml
Qt/android_arm64_v8a/lib/: Qt6Designer_arm64-v8a-android-dependencies.xml  Qt6Gui_arm64-v8a-android-dependencies.xml  Qt6Network_arm64-v8a-android-dependencies.xml  Qt6PrintSupport_arm64-v8a-android-dependencies.xml  Qt6QmlCompiler_arm64-v8a-android-dependencies.xml  Qt6Qml_arm64-v8a-android-dependencies.xml  Qt6Quick_arm64-v8a-android-dependencies.xml  Qt6Sql_arm64-v8a-android-dependencies.xml  Qt6Widgets_arm64-v8a-android-dependencies.xml  libQt6DesignerComponents_arm64-v8a.prl  libQt6Designer_arm64-v8a.prl  libQt6DeviceDiscoverySupport_arm64-v8a.prl  libQt6FbSupport_arm64-v8a.prl  libQt6Gui_arm64-v8a.prl  libQt6Help_arm64-v8a.prl  libQt6InputSupport_arm64-v8a.prl  libQt6LabsAnimation_arm64-v8a.prl  libQt6LabsFolderListModel_arm64-v8a.prl  libQt6LabsQmlModels_arm64-v8a.prl  libQt6LabsSettings_arm64-v8a.prl  libQt6LabsSharedImage_arm64-v8a.prl  libQt6LabsWavefrontMesh_arm64-v8a.prl  libQt6Network_arm64-v8a.prl  libQt6OpenGLWidgets_arm64-v8a.prl  libQt6OpenGL_arm64-v8a.prl  libQt6PacketProtocol_arm64-v8a.prl  libQt6PrintSupport_arm64-v8a.prl  libQt6QmlCompiler_arm64-v8a.prl  libQt6QmlCore_arm64-v8a.prl  libQt6QmlDebug_arm64-v8a.prl  libQt6QmlXmlListModel_arm64-v8a.prl  libQt6Qml_arm64-v8a.prl  libQt6QuickControls2Impl_arm64-v8a.prl  libQt6QuickControls2_arm64-v8a.prl  libQt6QuickControlsTestUtils_arm64-v8a.prl  libQt6QuickDialogs2QuickImpl_arm64-v8a.prl  libQt6QuickDialogs2Utils_arm64-v8a.prl  libQt6QuickDialogs2_arm64-v8a.prl  libQt6QuickEffects_arm64-v8a.prl  libQt6QuickLayouts_arm64-v8a.prl  (+14 more)
Qt/android_arm64_v8a/libexec/: qt-cmake-standalone-test
Qt/android_arm64_v8a/metatypes/: qt6core_relwithdebinfo_metatypes.json  qt6gui_relwithdebinfo_metatypes.json
Qt/android_arm64_v8a/mkspecs/: qconfig.pri  qdevice.pri  qmodule.pri
Qt/android_arm64_v8a/modules/: Concurrent.json  Core.json  Designer.json  DesignerComponentsPrivate.json  DeviceDiscoverySupportPrivate.json  FbSupportPrivate.json  FreetypePrivate.json  Gui.json  HarfbuzzPrivate.json  Help.json  JpegPrivate.json  (+49 more)
app/: build.gradle.kts  proguard-rules.pro
app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp  stdafx.h
app/src/main/cpp/voip/: android_video_renderer.cpp
common.shared/: Platform.h  build.gradle.kts  common.h  common_defs.cpp  environment.h  im_statistics.h  json_helper.cpp  json_helper.h  json_unserialize_helpers.h  omicron_keys.h  patch_version.h
common.shared/antivirus/: antivirus_types.cpp  antivirus_types.h
common.shared/config/: config.cpp  config.h  config_data.h  config_json.cpp
common.shared/crash_report/: crash_reporter.cpp
common.shared/message_processing/: message_tokenizer.cpp
common.shared/win32/: crash_handler.cpp
core/: CMakeLists.txt  build.gradle.kts  curl_handler.h  curl_multi_handler.cpp  icore_interface.h  proxy_settings.h  statistics.cpp  stats.h  stdafx.cpp  stdafx.h  utils.cpp
core/Voip/: VoipManager.cpp  VoipManagerDefines.h  voip_memory_reporter.cpp
core/Voip/libvoip/include/: VoipController.h
core/Voip/libvoip/include/render/: video_render_defines.h
core/Voip/libvoip/include/sigconv/: SignallingConverter.h
core/Voip/libvoip/src/: CallStateInternal.h
core/archive/: draft_storage.cpp  storage.cpp
core/configuration/: external_config.cpp  host_config.cpp  host_config.h
core/connections/: base_im.h  im_container.cpp
core/connections/wim/: auth_parameters.cpp  wim_im.cpp
core/connections/wim/async_loader/: async_handler.h  async_loader.h  transferred_data.h
core/connections/wim/events/: fetch_event_typing.cpp
core/connections/wim/loader/: loader_helpers.cpp
core/connections/wim/packets/: get_history.cpp  get_thread_subscribers.cpp
core/network/win32/: network_change_notifier_win.cpp  winsock_util.cpp  winsock_util.h
core/stats/im/: im_stats.h
core/tools/: binary_stream.h  features.cpp  features.h  strings.h  tlv.h
core/tools/linux/: system.linux.cpp
corelib/: CMakeLists.txt  build.gradle.kts  core_face.h  enumerations.h  stdafx.cpp  stdafx.h
gradle/: libs.versions.toml
gui/: CMakeLists.txt  build.gradle.kts  core_dispatcher.cpp  core_dispatcher.h  main_android.cpp
gui.shared/: build.gradle.kts  constants.h
gui/cache/: countries.h
gui/cache/avatars/: AvatarStorage.cpp
gui/cache/emoji/: Emoji.cpp
gui/controls/: TextUnit.h
gui/controls/textrendering/: TextRendering.h
gui/main_window/: AppsPage.cpp  PhoneWidget.cpp
gui/main_window/contact_list/: ChatMembersModel.cpp  SelectionContactsForGroupChat.cpp
gui/main_window/history_control/: MessagesScrollAreaLayout.cpp
gui/main_window/mini_apps/: MiniApps.cpp  MiniAppsContainer.cpp  MiniAppsUtils.h
gui/main_window/mplayer/: FFMpegPlayer.cpp
gui/main_window/sidebar/: ImageVideoList.cpp
gui/media/ptt/: AudioRecorder2.h
gui/memory_stats/: MemoryStatsCommon.h  MemoryStatsNamespace.h
gui/qml/: resource_qml.qrc
gui/spellcheck/: SpellcheckUtils.cpp  Types.h
gui/styles/: ThemeColor.h
gui/types/: chat.h  contact.h  fstring.h  lastseen.h  message.h  typing.h
gui/utils/: StringComparator.h  SvgUtils.cpp  SvgUtils.h  UrlUtils.cpp  UrlUtils.h  chromium.h  features.cpp  features.h  gui_coll_helper.h  utils.h
gui/voip/: PanelButtons.cpp  VoipProxy.h
gui/voip/renders/: layout.h
libomicron/: CMakeLists.txt  build.gradle.kts
products/: project_settings.cmake
products/icq/: project_settings.cmake
qt5-bundle/lib/: libQt5Concurrent.so.5.15  libQt5DBus.so.5.15  libQt5DesignerComponents.so.5.15.18  libQt5Help.so.5.15  libQt5MultimediaGstTools.so.5.15.18  libQt5MultimediaQuick.so.5.15  libQt5MultimediaWidgets.so.5  libQt5Network.so.5  libQt5QmlModels.so.5.15.18  libQt5QmlWorkerScript.so.5  libQt5QuickWidgets.so.5.15.18  libQt5Test.so.5.15  libQt5XcbQpa.so.5.15  libQt5Xml.so.5.15.18
requirements/: common.cmake
unittests/: build.gradle.kts
(+612 files in other folders)
