cmake_minimum_required(VERSION 3.19)

include(CheckFunctionExists)

get_filename_component(ICQ_ROOT "${CMAKE_SOURCE_DIR}" ABSOLUTE)
set(PRODUCT_SPEC_DIR "${ICQ_ROOT}/products/${PRODUCT}")
if(EXISTS "${PRODUCT_SPEC_DIR}")
    message(STATUS "PRODUCT_SPEC_DIR = ${PRODUCT_SPEC_DIR}")
else()
    message(FATAL_ERROR "Folder ${PRODUCT_SPEC_DIR} is not exists!)")
endif()
include(${PRODUCT_SPEC_DIR}/project_settings.cmake)

project(${APP_PROJECT_NAME})

message(STATUS "")
message(STATUS "[CMAKE]")
message(STATUS "[CMAKE] Using <CMakeLists.txt>")
message(STATUS "[CMAKE]")
message(STATUS "[CMAKE] CMake version = ${CMAKE_VERSION}")

if(NOT PRODUCT)
    set(PRODUCT "icq")
    message(STATUS "")
    message(STATUS "[INFO] Default product is ${PRODUCT}")
endif()

message(STATUS "[INFO] PRODUCT is ${PRODUCT}")

add_definitions(-DSUPPORT_EXTERNAL_CONFIG)
message(STATUS "add_definitions(-DSUPPORT_EXTERNAL_CONFIG)")

if(NOT WIN32)
    CHECK_FUNCTION_EXISTS(secure_getenv HAVE_SECURE_GETENV)
    if(HAVE_SECURE_GETENV)
        add_definitions(-DHAVE_SECURE_GETENV=1)
        message(STATUS "add_definitions(-DHAVE_SECURE_GETENV=1)")
    endif()
endif()

if(NOT APP_ENVIRONMENT)
    message(STATUS "APP_ENVIRONMENT is empty")
else()
    message(STATUS "APP_ENVIRONMENT is ${APP_ENVIRONMENT}")
    add_definitions(-DAPP_ENVIRONMENT="${APP_ENVIRONMENT}")
endif()

if(BUILD_FOR_STORE)
    message(STATUS "[cmake] This build for Store -> BUILD_FOR_STORE")
    add_definitions(-DBUILD_FOR_STORE=1)
    message(STATUS "add_definitions(-DBUILD_FOR_STORE=1)")
endif()

if(BUILD_PKG_MSI)
    message(STATUS "[cmake] This build makes MSI package -> BUILD_PKG_MSI")
    message(STATUS "add_definitions(-DBUILD_PKG_MSI=1)")
    add_definitions(-DBUILD_PKG_MSI=1)
endif()

if(BUILD_PKG_RPM)
    message(STATUS "[cmake] This build makes RPM package -> BUILD_PKG_RPM")
    message(STATUS "add_definitions(-DBUILD_PKG_RPM=1)")
    add_definitions(-DBUILD_PKG_RPM=1)
endif()

option(IM_QT_DYNAMIC "Qt dynamic linking" ON)

if(NOT IM_QT_DYNAMIC)
    add_definitions(-DIM_QT_STATIC)
    set(IM_QT_STATIC YES)
    message(STATUS "[INFO] Qt linking: static")
    message(STATUS "[INFO] add_definitions(-DIM_QT_STATIC)")
else()
    add_definitions(-DIM_QT_DYNAMIC)
    set(IM_QT_STATIC NO)
    message(STATUS "[INFO] Qt linking: dynamic")
    message(STATUS "[INFO] add_definitions(-DIM_QT_DYNAMIC)")
endif()

if (STRIP_VOIP)
    add_definitions(-DSTRIP_VOIP)
endif()

message(STATUS "DIR CMAKE_SOURCE_DIR = ${CMAKE_SOURCE_DIR}")
find_package(Git)
if (GIT_FOUND)
    message(STATUS "git found: ${GIT_EXECUTABLE} in version ${GIT_VERSION_STRING}")
    if(GIT_VERSION_STRING VERSION_LESS 2.23.0)
        execute_process(
            COMMAND ${GIT_EXECUTABLE} rev-parse --abbrev-ref HEAD
            WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
            OUTPUT_VARIABLE GIT_BRANCH_NAME
            OUTPUT_STRIP_TRAILING_WHITESPACE
        )
    else()
        execute_process(
            COMMAND ${GIT_EXECUTABLE} branch --show-current
            WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
            OUTPUT_VARIABLE GIT_BRANCH_NAME
            OUTPUT_STRIP_TRAILING_WHITESPACE
        )
    endif()
    execute_process(
        COMMAND ${GIT_EXECUTABLE} rev-parse --short HEAD
        WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
        OUTPUT_VARIABLE GIT_COMMIT_HASH
        OUTPUT_STRIP_TRAILING_WHITESPACE
    )
    message(STATUS "")
    message(STATUS "[BRANCH] Current GIT BRANCH NAME = ${GIT_BRANCH_NAME}")
    message(STATUS "[BRANCH] Current GIT COMMIT HASH = ${GIT_COMMIT_HASH}")
    message(STATUS "")

    if (ENABLE_BUILD_INFO)
        add_definitions("-DGIT_BRANCH_NAME=\"${GIT_BRANCH_NAME}\"")
        message(STATUS "add_definitions(-DGIT_BRANCH_NAME=${GIT_BRANCH_NAME})")

        add_definitions("-DGIT_COMMIT_HASH=\"${GIT_COMMIT_HASH}\"")
        message(STATUS "add_definitions(-DGIT_COMMIT_HASH=${GIT_COMMIT_HASH})")
    endif()
endif (GIT_FOUND)

if (ENABLE_BUILD_INFO)
    string(TIMESTAMP BUILD_TIME "%d/%m/%y %H:%M")
    string(TIMESTAMP BUILD_TIME_SHORT "%m%Y")
    add_definitions("-DBUILD_TIME=\"${BUILD_TIME}\"")
    add_definitions("-DBUILD_TIME_SHORT=\"${BUILD_TIME_SHORT}\"")
    message(STATUS "add_definitions(-DBUILD_TIME=${BUILD_TIME})")
    message(STATUS "Current BILD TIME = ${BUILD_TIME}")
endif()

if(IM_QT_DYNAMIC)
    if (HAS_WEB_ENGINE)
        message(STATUS "[INFO] Qt WebEngine: ON")
        add_definitions(-DHAS_WEB_ENGINE)
    endif()
    if (HAS_OAUTH2)
    message(STATUS "[INFO] OAuth2: ON")
        add_definitions(-DHAS_OAUTH2)
    endif()
endif()

if("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
    set(ICQ_DEBUG ON)
    set(ICQ_BIN_DIR "${ICQ_ROOT}/bin/Debug")
    set(ICQ_LIB_DIR "${ICQ_ROOT}/bin/Debug")
    set(CMAKE_CONFIGURATION_TYPES "Debug" CACHE STRING "" FORCE)
    if(APPLE)
        add_definitions(-DDEBUG=1)
        message(STATUS "add_definitions(-DDEBUG=1)")
    endif()
elseif("${CMAKE_BUILD_TYPE}" STREQUAL "Release")
    set(ICQ_RELEASE ON)
    set(ICQ_BIN_DIR "${ICQ_ROOT}/bin/Release")
    set(ICQ_LIB_DIR "${ICQ_ROOT}/bin/Release")
    set(CMAKE_CONFIGURATION_TYPES "Release" CACHE STRING "" FORCE)
    add_definitions(-DNDEBUG)
else()
    message(FATAL_ERROR "Need to specify CMAKE_BUILD_TYPE (-DCMAKE_BUILDTYPE=Debug|Release)")
endif()
message(STATUS "CMAKE_BUILD_TYPE is ${CMAKE_BUILD_TYPE}")
message(STATUS "CMAKE_CONFIGURATION_TYPES is ${CMAKE_CONFIGURATION_TYPES}")

file(MAKE_DIRECTORY ${ICQ_BIN_DIR})

message(STATUS "binaries output: " ${ICQ_BIN_DIR})
message(STATUS "libraries output: " ${ICQ_LIB_DIR})

set(ICQ_CORELIB_STATIC_LINKING ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

if(ENABLE_ASAN)
  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fsanitize=address -fno-omit-frame-pointer -fno-common")
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address -fno-omit-frame-pointer -fno-common")
  set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fsanitize=address")
  list(APPEND _build_flags "-fsanitize=address")
endif()
if(ENABLE_TSAN)
  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fsanitize=thread")
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=thread")
  set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fsanitize=thread")
  list(APPEND _build_flags "-fsanitize=thread")
endif()
if(ENABLE_UBSAN)
  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fsanitize=undefined")
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=undefined")
  set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fsanitize=undefined")
  list(APPEND _build_flags "-fsanitize=undefined")
endif()


if (NOT STRIP_VOIP)
    if(VOIP_AS_MODULE)
      # When building voip library from source (to do this, just add voip3 symlink to voip3 repo), include
      # voip sources before mangling flags, CMake options, etc. to avoid interference with voip build scripts
      add_subdirectory(voip3)
      set(VOIP_LIBRARIES libvoip::sdk_cpp_merged)
    endif()
endif()


if(MSVC)
    set(ICQ_PLATFORM windows)
    set(ICQ_ARCH x86)
    if(NOT IM_QT_DYNAMIC)
        if(ICQ_DEBUG)
            add_definitions(/MTd)
        else()
            add_definitions(/MT)
        endif()
    endif()
    add_definitions(/Zi)
    add_definitions(/MP)
    set(CMAKE_HAVE_PTHREAD_H OFF)
    add_definitions(-D_UNICODE)
    add_definitions(-DUNICODE)
    #add_definitions(-D_VARIADIC_MAX=6)
    add_definitions(-D_SILENCE_ALL_CXX17_DEPRECATION_WARNINGS)
    add_definitions(/Zm500)
    add_definitions(/W4)
    add_definitions(/wd4100)
    add_definitions(/we5038) # Wreorder
    add_definitions(/we4018) # '<': signed/unsigned mismatch
    add_definitions(/we4067)
    add_definitions(/we4389) # '==': signed/unsigned mismatch
    add_definitions(/we4189) # local variable is initialized but not referenced
    add_definitions(/we4172) # returning address of local variable or temporary
    add_definitions(/we4150) # deletion of pointer to incomplete type 'type'; no destructor called
    add_definitions(/we4245)
    add_definitions(/we4263)
    add_definitions(/we4264)
    add_definitions(/we4553)
    add_definitions(/we4573)
    add_definitions(/we4834) # 'nodiscard' attribute
    add_definitions(/we4715) # not all control paths return a value
    add_definitions(/we4130) #'==': logical operation on address of string constant
    add_definitions(/we4099) # type name first seen using 'struct' now seen using 'class'
    add_definitions(/we4146)
    add_definitions(/we4114)
    add_definitions(/we4551)
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /STACK:3145728") # for emoji map
    #add_definitions(/we4266) #update boost and qt or disable this warning for these headers

    set(WIN32_COMMON_OPTS "/Ob2 /Oi /Ot /GS- /GF /Gy /Gw /fp:except- /arch:SSE2 /Zc:inline")
    set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} ${WIN32_COMMON_OPTS}")
    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} ${WIN32_COMMON_OPTS}")

    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /DEBUG /OPT:NOREF /OPT:NOICF")
    set(WIN_SDK_DIR "$ENV{ProgramFiles\(x86\)}/Windows Kits/10")
    set(WIN_SDK_VER "10.0.18362.0")
    include_directories("${WIN_SDK_DIR}/Include/${WIN_SDK_VER}/shared")
    include_directories("${WIN_SDK_DIR}/Include/${WIN_SDK_VER}/winrt")
    include_directories("${WIN_SDK_DIR}/Include/${WIN_SDK_VER}/um")
    link_directories("${WIN_SDK_DIR}/Lib/${WIN_SDK_VER}/um/x86")
elseif(APPLE)
    set(ICQ_PLATFORM macos)
    set(ICQ_ARCH x64)
    set(CMAKE_XCODE_ATTRIBUTE_DEBUG_INFORMATION_FORMAT "dwarf-with-dsym")
    set(CMAKE_XCODE_ATTRIBUTE_GCC_GENERATE_DEBUGGING_SYMBOLS "YES")
    set(CMAKE_XCODE_ATTRIBUTE_CODE_SIGN_IDENTITY "")
    set(CMAKE_OSX_DEPLOYMENT_TARGET 10.13)

    set(MACOS_COMMON_FLAGS "-fvisibility-inlines-hidden -fvisibility=hidden -fasm-blocks -stdlib=libc++")
    set(MACOS_COMMON_FLAGS "${MACOS_COMMON_FLAGS} -mmacosx-version-min=${CMAKE_OSX_DEPLOYMENT_TARGET} -Werror=most -Werror=switch")
    list(APPEND _build_flags "-fvisibility-inlines-hidden")
    list(APPEND _build_flags "-fvisibility=hidden")
    list(APPEND _build_flags "-fasm-blocks")
    list(APPEND _build_flags "-stdlib=libc++")
    if("${CMAKE_BUILD_TYPE}" STREQUAL "Release")
        set(MACOS_COMMON_FLAGS "${MACOS_COMMON_FLAGS} -ffunction-sections -fdata-sections -fno-stack-protector")
        list(APPEND _build_flags "-ffunction-sections")
        list(APPEND _build_flags "-fdata-sections")
        list(APPEND _build_flags "-fno-stack-protector")
    endif()

    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${MACOS_COMMON_FLAGS}")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${MACOS_COMMON_FLAGS} -Werror=inconsistent-missing-override -Werror=effc++ -Werror=empty-body")
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -stdlib=libc++")
    add_definitions(-Werror=return-stack-address)
elseif(ANDROID)
    set(ICQ_PLATFORM android)
    set(ICQ_ARCH ${CMAKE_ANDROID_ARCH_ABI})
    set(ICQ_BIN_DIR "${ICQ_ROOT}/bin/android_${ICQ_ARCH}/${CMAKE_CONFIGURATION_TYPES}")
    set(ICQ_LIB_DIR "${ICQ_ROOT}/bin/android_${ICQ_ARCH}/${CMAKE_CONFIGURATION_TYPES}")
    message(STATUS "Android ABI: ${ICQ_ARCH}")
    
    add_definitions(-fPIC)
    add_definitions(-DANDROID)

    set(ANDROID_COMMON_FLAGS "-Wno-deprecated-declarations")
    if("${CMAKE_BUILD_TYPE}" STREQUAL "Release")
        set(ANDROID_COMMON_FLAGS "${ANDROID_COMMON_FLAGS} -ffunction-sections -fdata-sections -fno-stack-protector")
        list(APPEND _build_flags "-ffunction-sections" "-fdata-sections" "-fno-stack-protector")
        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${ANDROID_COMMON_FLAGS}")
        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${ANDROID_COMMON_FLAGS}")
        set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -Wl,--gc-sections")
        set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--gc-sections -fPIE -pie")
    else()
        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${ANDROID_COMMON_FLAGS}")
        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${ANDROID_COMMON_FLAGS}")
        set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DDEBUG")
    endif()
elseif(UNIX)
    set(LINUX ON)
    message(STATUS "Linux x64")
    set(LINUX64 ON)
    set(ICQ_ARCH x64)
    set(ARCH_FLAGS "-m64")
    set(ICQ_PLATFORM linux)
    set(ICQ_BIN_DIR "${ICQ_ROOT}/bin/${CMAKE_CONFIGURATION_TYPES}64")
    set(ICQ_LIB_DIR "${ICQ_ROOT}/bin/${CMAKE_CONFIGURATION_TYPES}64")
    add_definitions(-fPIC)
    add_definitions(-Werror=return-local-addr)

    if (RELATIVE_DEBUG_PATHS)
        add_definitions(-fdebug-prefix-map=${ICQ_ROOT}=.)
    endif()

    set(LINUX_COMMON_FLAGS "-g -DBOOST_NO_AUTO_PTR -Wno-deprecated-declarations")
    list(APPEND _build_flags "-g")
    list(APPEND _build_flags "-DBOOST_NO_AUTO_PTR")
    if(ENABLE_LTO)
      list(APPEND _build_flags "-flto")
      set(LINUX_COMMON_FLAGS "${LINUX_COMMON_FLAGS} -flto")
      set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -flto")
    endif()
    if("${CMAKE_BUILD_TYPE}" STREQUAL "Release")
        set(LINUX_COMMON_FLAGS "${LINUX_COMMON_FLAGS} -ffunction-sections -fdata-sections -fno-stack-protector -U_FORTIFY_SOURCE")
        list(APPEND _build_flags "-ffunction-sections")
        list(APPEND _build_flags "-fdata-sections")
        list(APPEND _build_flags "-fno-stack-protector")
        list(APPEND _build_flags "-U_FORTIFY_SOURCE")
    endif()
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${ARCH_FLAGS} ${LINUX_COMMON_FLAGS}")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${ARCH_FLAGS} ${LINUX_COMMON_FLAGS}")
    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DDEBUG")
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${ARCH_FLAGS} -no-pie -Wl,--version-script=${ICQ_ROOT}/icq.exports -Wl,--gc-sections -Wl,--no-as-needed")
    if(NOT DISABLE_STATIC_CXX)
        set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static-libgcc -static-libstdc++")
    endif()
else()
    message(FATAL_ERROR "Unknown platform")
endif()

if(LINUX AND NOT ANDROID)
    if(NOT USE_TOOLCHAIN)
        add_compile_definitions(_GLIBCXX_USE_CXX11_ABI=1)
        message(STATUS "")
        message(STATUS "[flags] set _GLIBCXX_USE_CXX11_ABI=1")
        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_GLIBCXX_USE_CXX11_ABI=1")
    endif()
endif()

# ---------------------------  linux toolchain --------------------------------
if(USE_TOOLCHAIN)
    if(LINUX)
        message(STATUS "")
        message(STATUS "[linux toolchain] --- --- --- -> ")

        set(CMAKE_SYSTEM_NAME Linux)
        set(CMAKE_TRY_COMPILE_TARGET_TYPE STATIC_LIBRARY)

        message(STATUS "[toolchain x86_64]")
        set(TOOLCHAIN_NAME "x86_64-centos7-linux-gnu")
        set(TOOLCHAIN_ARCH "x86_64-pc-linux-gnu")

        set(TOOLCHAIN_PATH "${USE_TOOLCHAIN}/${TOOLCHAIN_NAME}")
        if (NOT EXISTS "${TOOLCHAIN_PATH}")
            message(FATAL_ERROR "Toolchain ${TOOLCHAIN_PATH} not found!)")
        endif()

        set(CMAKE_C_COMPILER "${TOOLCHAIN_PATH}/bin/${TOOLCHAIN_NAME}-gcc" CACHE FILEPATH "" FORCE)
        set(CMAKE_CXX_COMPILER "${TOOLCHAIN_PATH}/bin/${TOOLCHAIN_NAME}-g++" CACHE FILEPATH "" FORCE)
        set(CMAKE_LINKER "${TOOLCHAIN_PATH}/bin/${TOOLCHAIN_NAME}-ld" CACHE FILEPATH "" FORCE)
        set(CMAKE_C_COMPILER_AR "${TOOLCHAIN_PATH}/bin/${TOOLCHAIN_NAME}-ar" CACHE FILEPATH "" FORCE)
        set(CMAKE_CXX_COMPILER_AR "${TOOLCHAIN_PATH}/bin/${TOOLCHAIN_NAME}-ar" CACHE FILEPATH "" FORCE)
        set(CMAKE_C_COMPILER_RANLIB "${TOOLCHAIN_PATH}/bin/${TOOLCHAIN_NAME}-ranlib" CACHE FILEPATH "" FORCE)
        set(CMAKE_CXX_COMPILER_RANLIB "${TOOLCHAIN_PATH}/bin/${TOOLCHAIN_NAME}-ranlib" CACHE FILEPATH "" FORCE)
        set(CMAKE_OBJCOPY "${TOOLCHAIN_PATH}/bin/${TOOLCHAIN_NAME}-objcopy" CACHE FILEPATH "" FORCE)
        set(CMAKE_OBJDUMP "${TOOLCHAIN_PATH}/bin/${TOOLCHAIN_NAME}-objdump" CACHE FILEPATH "" FORCE)
        set(CMAKE_NM "${TOOLCHAIN_PATH}/bin/${TOOLCHAIN_NAME}-nm" CACHE FILEPATH "" FORCE)
        set(CMAKE_AR "${TOOLCHAIN_PATH}/bin/${TOOLCHAIN_NAME}-ar" CACHE FILEPATH "" FORCE)
        set(CMAKE_ADDR2LINE "${TOOLCHAIN_PATH}/bin/${TOOLCHAIN_NAME}-addr2line" CACHE FILEPATH "" FORCE)
        set(CMAKE_RANLIB "${TOOLCHAIN_PATH}/bin/${TOOLCHAIN_NAME}-ranlib" CACHE FILEPATH "" FORCE)
        set(CMAKE_READELF "${TOOLCHAIN_PATH}/bin/${TOOLCHAIN_NAME}-readelf" CACHE FILEPATH "" FORCE)
        set(CMAKE_STRIP "${TOOLCHAIN_PATH}/bin/${TOOLCHAIN_NAME}-strip" CACHE FILEPATH "" FORCE)

        set(CMAKE_SYSROOT "${TOOLCHAIN_PATH}/${TOOLCHAIN_NAME}/sysroot")
        set(CMAKE_TC_ROOT_PATH "${TOOLCHAIN_PATH}/${TOOLCHAIN_NAME}")
        set(CMAKE_FIND_ROOT_PATH "${TOOLCHAIN_PATH}/${TOOLCHAIN_NAME}/sysroot")

        set(CMAKE_FIND_ROOT_PATH_MODE_PROGRAM NEVER)
        set(CMAKE_FIND_ROOT_PATH_MODE_LIBRARY ONLY)
        set(CMAKE_FIND_ROOT_PATH_MODE_INCLUDE ONLY)
        set(CMAKE_FIND_ROOT_PATH_MODE_PACKAGE ONLY)

        file(GLOB gcc_include_version RELATIVE "${CMAKE_TC_ROOT_PATH}/include/c++" "${CMAKE_TC_ROOT_PATH}/include/c++/*")
        include_directories(${CMAKE_TC_ROOT_PATH}/include/c++/${gcc_include_version})
        include_directories(${CMAKE_TC_ROOT_PATH}/include/c++/${gcc_include_version}/bits)
        include_directories(${CMAKE_TC_ROOT_PATH}/include)
        include_directories(${CMAKE_FIND_ROOT_PATH}/usr/include/X11)
        include_directories(${CMAKE_FIND_ROOT_PATH}/usr/include/GL)
        include_directories(${CMAKE_FIND_ROOT_PATH}/usr/include)

        link_directories("${CMAKE_FIND_ROOT_PATH}/lib")
        link_directories("${CMAKE_FIND_ROOT_PATH}/usr/lib")
    endif()
endif()
# -----------------------------------------------------------------------------

#shared definitions for linux and mac
if (NOT MSVC)
    add_definitions(-Werror=reorder)
    add_definitions(-Wno-error=unused)
    add_definitions(-Wno-error=missing-braces)
endif()

if (APPLE)
    add_definitions(-Werror=unused-comparison)
    add_definitions(-Werror=unused-lambda-capture)
endif()

message(STATUS "building on: ${ICQ_PLATFORM}")
if(ICQ_CORELIB_STATIC_LINKING)
    message(STATUS "corelib linking: static")
    add_definitions(-DICQ_CORELIB_STATIC_LINKING)
else()
    message(STATUS "corelib linking: dynamic")
endif()

option(ABORT_ON_ASSERT "Abort on asserts" OFF)

if (ABORT_ON_ASSERT)
    add_definitions(-DABORT_OB_ASSERTS)
endif()

# ---------------------------  paths  -----------------------------------------
set(CMAKE_EXECUTABLE_OUTPUT_DIRECTORY_DEBUG ${ICQ_BIN_DIR})
set(CMAKE_EXECUTABLE_OUTPUT_DIRECTORY_RELEASE ${ICQ_BIN_DIR})
set(CMAKE_EXECUTABLE_OUTPUT_PATH ${ICQ_BIN_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${ICQ_LIB_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${ICQ_LIB_DIR})
set(CMAKE_LIBRARY_OUTPUT_PATH ${ICQ_LIB_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${ICQ_BIN_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${ICQ_BIN_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${ICQ_BIN_DIR})

# --------------------------  validator  --------------------------------------
if(RUN_VALIDATOR)
    message(STATUS "[STAGE] VALIDATORS")
    find_package(PythonInterp 3 REQUIRED)
    message(STATUS "[INFO] PYTHON_EXECUTABLE = ${PYTHON_EXECUTABLE}")
    execute_process(COMMAND
                    "${PYTHON_EXECUTABLE}" buildsystem/validator_products_json.py --products "${ICQ_ROOT}/products"
                    WORKING_DIRECTORY ${ICQ_ROOT}
                    RESULT_VARIABLE RETURN_VALUE)
    if (NOT RETURN_VALUE EQUAL 0)
        message(STATUS "Fix JSON or update validator rules in buildsystem/validator_products_json.py")
        message(FATAL_ERROR "Products JSON check failed, return value ${RETURN_VALUE}")
    else()
        message(STATUS "Products JSON ${ICQ_ROOT}/products are valid")
    endif()
endif()
